--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1110,7 +1110,7 @@ hr {
 .cid-rRBN6JT0iJ {
   padding-top: 195px;
   padding-bottom: 105px;
-  background-image: url("../../../assets/images/1e1dcf0220587d14fb1a68966d29fd4f-1-2000x1465.png");
+  background-image: url("../../../assets/images/1e1dcf0220587d14fb1a68966d29fd4f-1-2000x1465.webp");
 }
 .cid-rRBN6JT0iJ .mbr-overlay {
   background-color: #000000;
@@ -1315,7 +1315,7 @@ hr {
   margin-left: 0rem;
 }
 .cid-rRBNgZqJNa .box {
-  background-image: url("../../../assets/images/channels4-profile-900x900.jpg");
+  background-image: url("../../../assets/images/channels4-profile-900x900.webp");
   background-size: cover;
   background-position: center;
   display: flex;
